# Perseus

./: .gitignore  .prettierrc  README.md  biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
core/: createPipeline.ts  index.ts
core/chunker/: Chunker.ts  segmentProtocol.ts
core/config/: Config.ts  ConfigLoader.ts  constants.ts  targetWikis.ts
core/errors/: PerseusError.ts
core/extractor/: Extractor.ts
core/generator/: WikitextGenerator.ts
core/input/: InputLoader.ts
core/ir/: IntermediateRepresentation.ts  LinkNode.ts  citation.ts
core/linkResolver/: WikidataLinkResolver.ts
core/llm/: LLMProvider.ts  ProviderFactory.ts  chatProtocol.ts
core/logging/: Logger.ts
core/merge/: Merger.ts
core/output/: OutputDelivery.ts
core/parser/: ParsoidParser.ts  citations.ts  placeholders.ts
core/pipeline/: Pipeline.ts  PipelineStage.ts
core/prompt/: PromptManager.ts
core/referenceAttention/: ReferenceAttention.ts
core/translationPackage/: export.ts  import.ts  index.ts  progress.ts  types.ts  validate.ts
core/translator/: Translator.ts
scripts/: sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: e2e-citation-preservation.test.ts  e2e-citation-registry.test.ts  e2e-edge-cases.test.ts  e2e-new-providers.test.ts  e2e-smoke.test.ts  e2e-translation-package.test.ts  e2e-update-checker.test.ts
(+63 files in other folders)
